@@ -18,11 +18,6 @@ package com.android.apksig.internal.apk.v4;
 
 import static com.android.apksig.internal.apk.ApkSigningBlockUtils.encodeCertificates;
 import static com.android.apksig.internal.apk.v3.V3SchemeSigner.APK_SIGNATURE_SCHEME_V3_BLOCK_ID;
-import static com.android.apksig.internal.asn1.Asn1DerEncoder.ASN1_DER_NULL;
-import static com.android.apksig.internal.oid.OidConstants.OID_DIGEST_SHA256;
-import static com.android.apksig.internal.oid.OidConstants.OID_SIG_EC_PUBLIC_KEY;
-import static com.android.apksig.internal.oid.OidConstants.OID_SIG_RSA;
-import static com.android.apksig.internal.oid.OidConstants.OID_SIG_SHA256_WITH_DSA;
 
 import com.android.apksig.apk.ApkFormatException;
 import com.android.apksig.apk.ApkUtils;
@@ -31,81 +26,66 @@ import com.android.apksig.internal.apk.ApkSigningBlockUtils.SignerConfig;
 import com.android.apksig.internal.apk.ContentDigestAlgorithm;
 import com.android.apksig.internal.apk.SignatureAlgorithm;
 import com.android.apksig.internal.apk.SignatureInfo;
+import com.android.apksig.internal.apk.v3.V3SchemeSigner;
 import com.android.apksig.internal.apk.v3.V3SchemeVerifier;
-import com.android.apksig.internal.asn1.Asn1EncodingException;
-import com.android.apksig.internal.pkcs7.AlgorithmIdentifier;
 import com.android.apksig.internal.util.Pair;
 import com.android.apksig.util.DataSource;
 import com.android.apksig.zip.ZipFormatException;
 
-import java.io.DataOutputStream;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.OutputStream;
 import java.nio.ByteBuffer;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.security.PublicKey;
 import java.security.SignatureException;
 import java.security.cert.CertificateEncodingException;
-import java.security.interfaces.ECKey;
-import java.security.interfaces.RSAKey;
-import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 
 /**
- * APK Signature Scheme V4 signer.
- * V4 scheme file contains 3 mandatory fields - used during installation.
- * And optional verity tree - has to be present during session commit.
- *
+ * APK Signature Scheme V4 signer. V4 scheme file contains 2 mandatory fields - used during
+ * installation. And optional verity tree - has to be present during session commit.
+ * <p>
  * The fields:
  * <p>
- * 1. verityRootHash: bytes of the hash tree root (digest of first 1-page of the tree),
- * 2. V3Digest: digest from v2/v3 signing schema,
- * 3. pkcs7SignatureBlock: bytes of the signature over encoded signed data, which includes 1 and 2,
+ * 1. hashingInfo - verity root hash and hashing info,
+ * 2. signingInfo - certificate, public key and signature,
+ * For more details see V4Signature.
  * </p>
  * (optional) verityTree: integer size prepended bytes of the verity hash tree.
- *
- * TODO(schfan): Pass v3 digest to v4 signature proto and add verification code
- * TODO(schfan): Add v4 unit tests
+ * <p>
+ * TODO(schfan): Pass v3 digest to v4 signature proto and add verification code TODO(schfan): Add v4
+ * unit tests
  */
 public abstract class V4SchemeSigner {
-    /** Hidden constructor to prevent instantiation. */
+    /**
+     * Hidden constructor to prevent instantiation.
+     */
     private V4SchemeSigner() {
     }
 
     /**
      * Based on a public key, return a signing algorithm that supports verity.
      */
-    public static SignatureAlgorithm getSuggestedSignatureAlgorithm(PublicKey signingKey)
+    public static List<SignatureAlgorithm> getSuggestedSignatureAlgorithms(PublicKey signingKey,
+            int minSdkVersion, boolean apkSigningBlockPaddingSupported)
             throws InvalidKeyException {
-        final String keyAlgorithm = signingKey.getAlgorithm();
-        if ("RSA".equalsIgnoreCase(keyAlgorithm)) {
-            final int modulusLengthBits = ((RSAKey) signingKey).getModulus().bitLength();
-            if (modulusLengthBits <= 3072) {
-                return SignatureAlgorithm.VERITY_RSA_PKCS1_V1_5_WITH_SHA256;
-            } else {
-                // Keys longer than 3072 bit need to be paired with a stronger digest to avoid the
-                // digest being the weak link. SHA-512 is the next strongest supported digest.
-                throw new InvalidKeyException(
-                        "Key requires SHA-512 signature algorithm, not yet supported with verity");
+        List<SignatureAlgorithm> algorithms = V3SchemeSigner.getSuggestedSignatureAlgorithms(
+                signingKey, minSdkVersion,
+                apkSigningBlockPaddingSupported);
+        // Keeping only supported algorithms.
+        for (Iterator<SignatureAlgorithm> iter = algorithms.listIterator(); iter.hasNext(); ) {
+            final SignatureAlgorithm algorithm = iter.next();
+            if (!isSupported(algorithm.getContentDigestAlgorithm())) {
+                iter.remove();
             }
-        } else if ("DSA".equalsIgnoreCase(keyAlgorithm)) {
-            return SignatureAlgorithm.VERITY_DSA_WITH_SHA256;
-        } else if ("EC".equalsIgnoreCase(keyAlgorithm)) {
-            final int keySizeBits = ((ECKey) signingKey).getParams().getOrder().bitLength();
-            if (keySizeBits <= 256) {
-                return SignatureAlgorithm.VERITY_ECDSA_WITH_SHA256;
-            } else {
-                throw new InvalidKeyException(
-                        "Key requires SHA-512 signature algorithm, not yet supported with verity");
-            }
-        } else {
-            throw new InvalidKeyException("Unsupported key algorithm: " + keyAlgorithm);
         }
+        return algorithms;
     }
 
     /**
@@ -116,9 +96,14 @@ public abstract class V4SchemeSigner {
             SignerConfig signerConfig,
             File outputFile)
             throws IOException, InvalidKeyException, NoSuchAlgorithmException {
-        Map<ContentDigestAlgorithm, Pair<byte[], byte[]>> verityDigest = new HashMap<>();
-        ApkSigningBlockUtils.computeChunkVerityTreeAndDigest(apkContent, verityDigest);
+        // Salt has to stay empty for fs-verity compatibility.
+        final byte[] salt = null;
+        // Not used by apksigner.
+        final byte[] additionalData = null;
 
+        final long fileSize = apkContent.size();
+
+        // Obtaining first supported digest from v3 block (SHA256 or SHA512).
         byte[] v3digest;
         try {
             v3digest = getV3Digest(apkContent);
@@ -127,79 +112,83 @@ public abstract class V4SchemeSigner {
             throw new IOException("Failed to parse V3-signed apk to read its V3 digest");
         }
 
-        final Pair<V4Signature, byte[]> signaturePair;
+        // Obtaining the merkle tree and the root hash in verity format.
+        ApkSigningBlockUtils.VerityTreeAndDigest verityContentDigestInfo =
+                ApkSigningBlockUtils.computeChunkVerityTreeAndDigest(apkContent);
+
+        final ContentDigestAlgorithm verityContentDigestAlgorithm =
+                verityContentDigestInfo.contentDigestAlgorithm;
+        final byte[] rootHash = verityContentDigestInfo.rootHash;
+        final byte[] tree = verityContentDigestInfo.tree;
+
+        final Pair<Integer, Byte> hashingAlgorithmBlockSizePair = convertToV4HashingInfo(
+                verityContentDigestAlgorithm);
+        final V4Signature.HashingInfo hashingInfo = new V4Signature.HashingInfo(
+                hashingAlgorithmBlockSizePair.getFirst(), hashingAlgorithmBlockSizePair.getSecond(),
+                salt, rootHash);
+
+        // Generating SigningInfo and combining everything into V4Signature.
+        final V4Signature signature;
         try {
-            signaturePair = generateSignatureObject(signerConfig, verityDigest, v3digest);
-        } catch (InvalidKeyException | SignatureException |
-                CertificateEncodingException | Asn1EncodingException e) {
+            signature = generateSignature(signerConfig, hashingInfo, v3digest, additionalData,
+                    fileSize);
+        } catch (InvalidKeyException | SignatureException | CertificateEncodingException e) {
             throw new InvalidKeyException("Signer failed", e);
         }
 
-        V4Signature signature = signaturePair.getFirst();
-        byte[] tree = signaturePair.getSecond();
-
-        try (final DataOutputStream output = new DataOutputStream(
-                new FileOutputStream(outputFile))) {
+        try (final OutputStream output = new FileOutputStream(outputFile)) {
             signature.writeTo(output);
-            if (tree != null && tree.length != 0) {
-                V4Signature.writeBytes(output, tree);
-            }
+            V4Signature.writeBytes(output, tree);
+        } catch (IOException e) {
+            outputFile.delete();
+            throw e;
         }
     }
 
-    private static Pair<V4Signature, byte[]> generateSignatureObject(
+    private static V4Signature generateSignature(
             SignerConfig signerConfig,
-            Map<ContentDigestAlgorithm, Pair<byte[], byte[]>> contentDigests,
-            byte[] v3Digest)
+            V4Signature.HashingInfo hashingInfo,
+            byte[] v3Digest, byte[] additionaData, long fileSize)
             throws NoSuchAlgorithmException, InvalidKeyException, SignatureException,
-            CertificateEncodingException, Asn1EncodingException {
+            CertificateEncodingException {
         if (signerConfig.certificates.isEmpty()) {
             throw new SignatureException("No certificates configured for signer");
         }
-        final PublicKey publicKey = signerConfig.certificates.get(0).getPublicKey();
-
-        final List<byte[]> certificates = encodeCertificates(signerConfig.certificates);
-        if (certificates.size() != 1) {
+        if (signerConfig.certificates.size() != 1) {
             throw new CertificateEncodingException("Should only have one certificate");
         }
 
-        if (signerConfig.signatureAlgorithms.size() != 1) {
-            throw new SignatureException("Should only be one signature algorithm");
-        }
+        // Collecting data for signing.
+        final PublicKey publicKey = signerConfig.certificates.get(0).getPublicKey();
 
-        final SignatureAlgorithm signatureAlgorithm = signerConfig.signatureAlgorithms.get(0);
-        final ContentDigestAlgorithm contentDigestAlgorithm =
-                signatureAlgorithm.getContentDigestAlgorithm();
-        final Pair<byte[], byte[]> contentDigest = contentDigests.get(contentDigestAlgorithm);
-        if (contentDigest == null) {
-            throw new SignatureException("Cannot find computed digest");
-        }
-        byte[] tree = contentDigest.getFirst();
-        byte[] rootHash = contentDigest.getSecond();
+        final List<byte[]> encodedCertificates = encodeCertificates(signerConfig.certificates);
+        final byte[] encodedCertificate = encodedCertificates.get(0);
 
-        byte[] data = ByteBuffer.allocate(rootHash.length + v3Digest.length)
-                .put(rootHash).put(v3Digest).array();
+        final V4Signature.SigningInfo signingInfoNoSignature = new V4Signature.SigningInfo(v3Digest,
+                encodedCertificate, additionaData, publicKey.getEncoded(), -1, null);
 
+        final byte[] data = V4Signature.getSigningData(fileSize, hashingInfo,
+                signingInfoNoSignature);
+
+        // Signing.
         final List<Pair<Integer, byte[]>> signatures =
                 ApkSigningBlockUtils.generateSignaturesOverData(signerConfig, data);
         if (signatures.size() != 1) {
             throw new SignatureException("Should only be one signature generated");
         }
 
-        byte[] pkcs7SignatureBlock = ApkSigningBlockUtils.generatePkcs7DerEncodedMessage(
-                signatures.get(0).getSecond(), /* signature bytes */
-                ByteBuffer.wrap(data),
-                signerConfig.certificates,
-                new AlgorithmIdentifier(OID_DIGEST_SHA256, ASN1_DER_NULL), /* digest algo id */
-                getSignatureAlgorithmIdentifier(publicKey));
+        final int signatureAlgorithmId = signatures.get(0).getFirst();
+        final byte[] signature = signatures.get(0).getSecond();
 
-        final V4Signature signature =
-                new V4Signature(V4Signature.CURRENT_VERSION,
-                        rootHash, v3Digest, pkcs7SignatureBlock);
-        return Pair.of(signature, tree);
+        final V4Signature.SigningInfo signingInfo = new V4Signature.SigningInfo(v3Digest,
+                encodedCertificate, additionaData, publicKey.getEncoded(), signatureAlgorithmId,
+                signature);
+
+        return new V4Signature(V4Signature.CURRENT_VERSION, hashingInfo.toByteArray(),
+                signingInfo.toByteArray());
     }
 
-    // Get V3 digest by parsing the V3-signed apk
+    // Get V3 digest by parsing the V3-signed apk and choosing the first digest of supported type.
     private static byte[] getV3Digest(DataSource apk) throws ApkFormatException, IOException,
             ApkSigningBlockUtils.SignatureNotFoundException, NoSuchAlgorithmException,
             SignatureException {
@@ -227,40 +216,49 @@ public abstract class V4SchemeSigner {
         if (contentDigests.isEmpty()) {
             throw new SignatureException("Should have at least one digest");
         }
+
+        int bestAlgorithm = -1;
+        byte[] bestDigest = null;
         for (ApkSigningBlockUtils.Result.SignerInfo.ContentDigest contentDigest : contentDigests) {
             final SignatureAlgorithm signatureAlgorithm =
                     SignatureAlgorithm.findById(contentDigest.getSignatureAlgorithmId());
-            if (signatureAlgorithm == null) {
-                continue;
-            }
             final ContentDigestAlgorithm contentDigestAlgorithm =
                     signatureAlgorithm.getContentDigestAlgorithm();
-            if (contentDigestAlgorithm == null) {
+            if (!isSupported(contentDigestAlgorithm)) {
                 continue;
             }
-            if (contentDigestAlgorithm == ContentDigestAlgorithm.CHUNKED_SHA256
-                || contentDigestAlgorithm == ContentDigestAlgorithm.CHUNKED_SHA512) {
-                return contentDigest.getValue();
+            // Prefer SHA512 over SHA256, if both are available.
+            if (bestAlgorithm < contentDigestAlgorithm.getId()) {
+                bestAlgorithm = contentDigestAlgorithm.getId();
+                bestDigest = contentDigest.getValue();
             }
         }
-        throw new SignatureException("Failed to find any V3 digest in the source APK");
+        if (bestDigest == null) {
+            throw new SignatureException("Failed to find a supported V3 digest in the source APK");
+        }
+        return bestDigest;
     }
 
-    /**
-     * Returns the JCA SHA256 {@code AlgorithmIdentifier} and PKCS #7 {@code SignatureAlgorithm} to
-     * use when signing with the specified key.
-     */
-    private static AlgorithmIdentifier getSignatureAlgorithmIdentifier(
-            PublicKey publicKey) throws InvalidKeyException {
-        String keyAlgorithm = publicKey.getAlgorithm();
-        if ("RSA".equalsIgnoreCase(keyAlgorithm)) {
-            return new AlgorithmIdentifier(OID_SIG_RSA, ASN1_DER_NULL);
-        } else if ("DSA".equalsIgnoreCase(keyAlgorithm)) {
-            return new AlgorithmIdentifier(OID_SIG_SHA256_WITH_DSA, ASN1_DER_NULL);
-        } else if ("EC".equalsIgnoreCase(keyAlgorithm)) {
-            return new AlgorithmIdentifier(OID_SIG_EC_PUBLIC_KEY, ASN1_DER_NULL);
-        } else {
-            throw new InvalidKeyException("Unsupported key algorithm: " + keyAlgorithm);
+    private static boolean isSupported(final ContentDigestAlgorithm contentDigestAlgorithm) {
+        if (contentDigestAlgorithm == null) {
+            return false;
+        }
+        if (contentDigestAlgorithm == ContentDigestAlgorithm.CHUNKED_SHA256
+                || contentDigestAlgorithm == ContentDigestAlgorithm.CHUNKED_SHA512) {
+            return true;
+        }
+        return false;
+    }
+
+    private static Pair<Integer, Byte> convertToV4HashingInfo(ContentDigestAlgorithm algorithm)
+            throws NoSuchAlgorithmException {
+        switch (algorithm) {
+            case VERITY_CHUNKED_SHA256:
+                return Pair.of(V4Signature.HASHING_ALGORITHM_SHA256,
+                        V4Signature.LOG2_BLOCK_SIZE_4096_BYTES);
+            default:
+                throw new NoSuchAlgorithmException(
+                        "Invalid hash algorithm, only SHA2-256 over 4 KB chunks supported.");
         }
     }
 }
